# CloudHost

./: .gitignore  Cargo.toml  README.md  clouds-config.toml  config.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
android/: AndroidManifest.xml  README.md  termux-setup.sh
server/: Cargo.toml  README.md  config.toml
server/src/: auth.rs  cloud.rs  cloud_folder.rs  clouds_config.rs  config.rs  config_paths.rs  debug_stream.rs  error.rs  lib.rs  orchestrator.rs  profile.rs  routes.rs  server.rs
server/src/api_routes/: cloud.rs  cloudfolders.rs  delete.rs  index.rs  mod.rs  upload.rs
server/src/utils/: mod.rs  path_utils.rs
server/src/web_routes/: auth.rs  cloud_folder.rs  cloudfolder.rs  index.rs  mod.rs
shared/: Cargo.toml
shared/src/: config_paths.rs  debug_stream.rs  lib.rs
src/: config.rs  main.rs  models.rs
tui/: Cargo.toml  README.md  config.toml
tui/src/: config.rs  error.rs  main.rs  models.rs
tui/src/components/: mod.rs  password_modal.rs
tui/src/tabs/: client_tab.rs  focus.rs  mod.rs  server_tab.rs  settings_tab.rs  tab_common.rs  types.rs
tui/src/tabs/client/: models.rs  ui.rs
tui/src/tabs/clouds/: models.rs  ui.rs
tui/src/tabs/folders/: models.rs  ui.rs
tui/src/tabs/server/: models.rs  ui.rs
tui/src/tabs/settings/: models.rs  ui.rs
tui/src/utils/: password.rs
