[workspace]
members = [
    "tui",
    "server"
    # Future UIs you could add:
    # "gui",      # Desktop GUI (GTK/Qt)
    # "web",       # Web UI (React/Vue)
    # "cli",       # Command line interface
]
resolver = "2"

# Add convenience binaries for easier building
[[bin]]
name = "cloudhost-tui"
path = "tui/src/main.rs"

[[bin]]
name = "cloudhost-server"
path = "server/src/main.rs"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
