[workspace]
members = [
    "tui",
    "server", 
    "shared"
    # Future UIs you could add:
    # "gui",      # Desktop GUI (GTK/Qt)
    # "web",       # Web UI (React/Vue)
    # "cli",       # Command line interface
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

[workspace.package]
version = "0.2.5"
edition = "2021"
authors = ["Stepan Zagray"]
description = "Personal Cloud Storage Server with UI"
license = "MIT"
repository = "https://github.com/yourusername/cloudhost"
keywords = ["cloud", "storage", "server", "tui", "personal"]
categories = ["command-line-utilities", "web-programming::http-server"]

# Windows-specific optimizations to reduce false positives
[profile.release]
# Optimize for size to reduce false positives
opt-level = "z"
# Strip debug symbols
strip = true
# Enable link-time optimization
lto = true
# Reduce binary size
codegen-units = 1
# Panic on abort instead of unwind (smaller binary)
panic = "abort"
# Additional optimizations for Windows
[profile.release.package."*"]
opt-level = "z"