[package]
name = "cloudhost-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
mime_guess = "2.0"
bcrypt = "0.15"
jsonwebtoken = "9.0"
toml = "0.8"
cloudhost-shared = { path = "../shared", version = "0.2.3" }