[package]
name = "cloudhost-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Cloud Storage Server Backend for CloudHost TUI"
license = { workspace = true }
repository = { workspace = true }

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
mime_guess = "2.0"
bcrypt = "0.15"
jsonwebtoken = "9.0"
toml = "0.8"
# trash dependency is only included when desktop feature is enabled

[dependencies.trash]
version = "5.0"
optional = true

[features]
default = ["desktop"]
desktop = ["trash"]
mobile = []