[package]
name = "cloudhost-shared"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
dirs = "5.0"
