[package]
name = "cloudhost"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = "5.0"
cloudhost-server = { path = "../server" }
tracing-subscriber = "0.3"
