[package]
name = "cloudhost-tui"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Personal Cloud Storage Server with TUI (Terminal User Interface)"
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "cloudhost-tui"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = "5.0"
cloudhost-server = { path = "../server", default-features = false }
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
open = "5.0"

[features]
default = ["desktop"]
desktop = ["cloudhost-server/desktop"]
mobile = ["cloudhost-server/mobile"]